# Quasigroup

./: .gitignore  CMakeLists.txt  IncidenceCube.cpp  IncidenceCube.h  Quasigroup.cpp  Quasigroup.h  README.md  main.cpp  makefile
experiments/result/: aq_average_affine_light_y.txt  aq_average_affine_x.txt  aq_average_affine_y.txt  average_affine_y.txt  average_simple_y.txt  jm_average_affine_light_y.txt  jm_average_affine_x.txt  jm_average_affine_y.txt
src/main/cpp/: GeneratedObject.cpp  GeneratedObject.h  Helper.cpp  Helper.h  IncidenceCube.cpp  IncidenceCube.h  JMQuasigroup.cpp  JMQuasigroup.h  PFQuasigroup.cpp  PFQuasigroup.h  ProperFamily.cpp  ProperFamily.h  Quasigroup.cpp  Quasigroup.h  TPQuasigroup.cpp  TPQuasigroup.h  TotalPermutation.cpp  TotalPermutation.h  main.cpp
src/main/cpp/function/: AbelianGroupAutomirphism.cpp  AbelianGroupAutomorphism.h
src/main/cpp/function/family/: FeistelNetwork.h  ProperFamily.h  ShiftRegister.h
src/main/cpp/function_family/: FeistelNetwork.cpp  FeistelNetwork.h  FunctionFamily.cpp  FunctionFamily.h  ProperFamily.cpp  ProperFamily.h  ShiftRegister.cpp  ShiftRegister.h  TotalPermutation.cpp  TotalPermutation.h
src/main/cpp/generator/: QuasigroupGenerator.cpp  QuasigroupGenerator.h
src/main/cpp/quasigroup/: Quasigroup.cpp  Quasigroup.h
src/main/cpp/quasigroup/factory/: AffineQuasigroupFactory.cpp  AffineQuasigroupFactory.h  FNQuasigroupFactory.cpp  FNQuasigroupFactory.h  FunctionalQuasigroupFactory.h  JMQuasigroupFactory.cpp  JMQuasigroupFactory.h  LatinSquareQuasigroupFactory.h  PFQuasigroupFactory.cpp  PFQuasigroupFactory.h  QuasigroupFactory.h  SRQuasigroupFactory.cpp  SRQuasigroupFactory.h
src/main/cpp/quasigroup/functional/: FNQuasigroup.cpp  FNQuasigroup.h  FunctionalQuasigroup.cpp  FunctionalQuasigroup.h  PFQuasigroup.cpp  PFQuasigroup.h  SRQuasigroup.cpp  SRQuasigroup.h  TPQuasigroup.cpp  TPQuasigroup.h
src/main/cpp/quasigroup/group/: AbelianGroup.cpp  AbelianGroup.h
src/main/cpp/quasigroup/latin_square/: AffineQuasigroup.cpp  AffineQuasigroup.h  JMQuasigroup.cpp  JMQuasigroup.h  LatinSquareQuasigroup.cpp  LatinSquareQuasigroup.h
src/main/cpp/quasigroup/square/: AffineQuasigroup.cpp  AffineQuasigroup.h  JMQuasigroup.cpp  JMQuasigroup.h  LatinSquareQuasigroup.cpp  LatinSquareQuasigroup.h
src/main/cpp/statistics/: ExperimentalReport.cpp  ExperimentalReport.h  ExperimentsRunner.cpp  ExperimentsRunner.h
src/main/cpp/statistics/experiment/: CheckPropertyTimeExperiment.cpp  CheckPropertyTimeExperiment.h  Experiment.h  GenerationTimeExperiment.cpp  GenerationTimeExperiment.h  QuantitiveExperiment.cpp  QuantitiveExperiment.h
src/main/cpp/utils/: Helper.h  IncidenceCube.cpp  IncidenceCube.h
src/test/cpp/: tests.cpp  tests.h
tools/: plot.py
